--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
                             <h2 class="features-title visually-hidden">Features</h2>
                             <ul class="features-list">
                                 <li class="features-item">
-                                    <h3 class="features-name">Strategy</h3>
+                                    <h3 class="features-name caption">Strategy</h3>
                                     <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                                 </li>
                                 <li class="features-item">
-                                    <h3 class="features-name">Punctuality</h3>
+                                    <h3 class="features-name caption">Punctuality</h3>
                                     <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                                 </li>
                                 <li>
-                                    <h3 class="features-name">Diligence</h3>
+                                    <h3 class="features-name caption">Diligence</h3>
                                     <p class="features-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                                 </li>
                                 <li class="features-item">
-                                    <h3 class="features-name">Technologies</h3>
+                                    <h3 class="features-name caption">Technologies</h3>
                                     <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                                 </li>
                             </ul>
@@ -80,61 +80,81 @@
                             <ul class="our-team-list">
                                 <li class="our-team-item">
                                     <img src="./images/team-1.jpg" alt="Mark Guerrero – Product Designer" width="264" height="260" />
-                                    <h3 class="our-team-name">Mark Guerrero</h3>
-                                    <p class="our-team-text">Product Designer</p>
+                                    <div class="container-sud">
+                                        <h3 class="our-team-name vidstup">Mark Guerrero</h3>
+                                        <p class="our-team-text">Product Designer</p>
+                                    </div>
                                 </li>
                                 <li class="our-team-item">
                                     <img src="./images/team-2.jpg" alt="Tom Ford – Frontend Developer" width="264" height="260" />
-                                    <h3 class="our-team-name">Tom Ford</h3>
-                                    <p class="our-team-text">Frontend Developer</p>
+                                    <div class="container-sud">
+                                        <h3 class="our-team-name vidstup">Tom Ford</h3>
+                                        <p class="our-team-text">Frontend Developer</p>
+                                    </div>
                                 </li>
                                 <li class="our-team-item">
                                     <img src="./images/team-3.jpg" alt="Camila Garcia – Marketing" width="264" height="260" />
-                                    <h3 class="our-team-name">Camila Garcia</h3>
-                                    <p class="our-team-text">Marketing</p>
+                                    <div class="container-sud">
+                                        <h3 class="our-team-name vidstup">Camila Garcia</h3>
+                                        <p class="our-team-text">Marketing</p>
+                                    </div>
                                 </li>
                                 <li class="our-team-item">
                                     <img src="./images/team-4.jpg" alt="Daniel Wilson – UI Designer" width="264" height="260" />
-                                    <h3 class="our-team-name">Daniel Wilson</h3>
-                                    <p class="our-team-text">UI Designer</p>
+                                    <div class="container-sud">
+                                        <h3 class="our-team-name vidstup">Daniel Wilson</h3>
+                                        <p class="our-team-text">UI Designer</p>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
                     </section>
 
                     <section class="section-portfolio">
-                        <div class="container">
+                        <div class="container container-portfolio">
                             <h2 class="portfolio-title">Our Portfolio</h2>
                             <ul class="portfolio-list">
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" height="300" />
-                                    <h3 class="portfolio-name">Banking App</h3>
-                                    <p class="portfolio-text">App</p>
+                                    <div class="container-portfolio-smart">
+                                        <h3 class="portfolio-name">Banking App</h3>
+                                        <p class="portfolio-text">App</p>
+                                    </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" height="300" />
-                                    <h3 class="portfolio-name">Cashless Payment</h3>
-                                    <p class="portfolio-text">Marketing</p>
+                                    <div class="container-portfolio-smart">
+                                        <h3 class="portfolio-name">Cashless Payment</h3>
+                                        <p class="portfolio-text">Marketing</p>
+                                    </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360" height="300" />
-                                    <h3 class="portfolio-name">Meditation App</h3>
-                                    <p class="portfolio-text">App</p>
+                                    <div class="container-portfolio-smart">
+                                        <h3 class="portfolio-name">Meditation App</h3>
+                                        <p class="portfolio-text">App</p>
+                                    </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360" height="300" />
-                                    <h3 class="portfolio-name">Taxi Service</h3>
-                                    <p class="portfolio-text">Marketing</p>
+                                    <div class="container-portfolio-smart">
+                                        <h3 class="portfolio-name">Taxi Service</h3>
+                                        <p class="portfolio-text">Marketing</p>
+                                    </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360" height="300" />
-                                    <h3 class="portfolio-name">Screen Illustrations</h3>
-                                    <p class="portfolio-text">Design</p>
+                                    <div class="container-portfolio-smart">
+                                        <h3 class="portfolio-name">Screen Illustrations</h3>
+                                        <p class="portfolio-text">Design</p>
+                                    </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360" height="300" />
-                                    <h3 class="portfolio-name">Online Courses</h3>
-                                    <p class="portfolio-text">Marketing</p>
+                                    <div class="container-portfolio-smart">
+                                        <h3 class="portfolio-name">Online Courses</h3>
+                                        <p class="portfolio-text">Marketing</p>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
