--- a/index.html
+++ b/index.html
@@ -117,42 +117,42 @@
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-1.jpg" alt="Banking App" width="360" height="300" />
                                     <div class="container-portfolio-smart">
-                                        <h3 class="portfolio-name">Banking App</h3>
+                                        <h3 class="portfolio-name taki">Banking App</h3>
                                         <p class="portfolio-text">App</p>
                                     </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-2.jpg" alt="Cashless Payment" width="360" height="300" />
                                     <div class="container-portfolio-smart">
-                                        <h3 class="portfolio-name">Cashless Payment</h3>
+                                        <h3 class="portfolio-name taki">Cashless Payment</h3>
                                         <p class="portfolio-text">Marketing</p>
                                     </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-3.jpg" alt="Meditation App" width="360" height="300" />
                                     <div class="container-portfolio-smart">
-                                        <h3 class="portfolio-name">Meditation App</h3>
+                                        <h3 class="portfolio-name taki">Meditation App</h3>
                                         <p class="portfolio-text">App</p>
                                     </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-4.jpg" alt="Taxi Service" width="360" height="300" />
                                     <div class="container-portfolio-smart">
-                                        <h3 class="portfolio-name">Taxi Service</h3>
+                                        <h3 class="portfolio-name taki">Taxi Service</h3>
                                         <p class="portfolio-text">Marketing</p>
                                     </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-5.jpg" alt="Screen Illustrations" width="360" height="300" />
                                     <div class="container-portfolio-smart">
-                                        <h3 class="portfolio-name">Screen Illustrations</h3>
+                                        <h3 class="portfolio-name taki">Screen Illustrations</h3>
                                         <p class="portfolio-text">Design</p>
                                     </div>
                                 </li>
                                 <li class="portfolio-item">
                                     <img src="./images/portfolio-6.jpg" alt="Online Courses" width="360" height="300" />
                                     <div class="container-portfolio-smart">
-                                        <h3 class="portfolio-name">Online Courses</h3>
+                                        <h3 class="portfolio-name taki">Online Courses</h3>
                                         <p class="portfolio-text">Marketing</p>
                                     </div>
                                 </li>
