--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <h3 class="features-name caption">Punctuality</h3>
                                     <p class="features-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                                 </li>
-                                <li>
+                                <li class="features-item">
                                     <h3 class="features-name caption">Diligence</h3>
                                     <p class="features-text">Research and confirm brands with the strongest digital growth opportunities and minimize risk.</p>
                                 </li>
